<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
  android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/balance_title"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#de000000"
            android:textSize="22sp"
            android:text="@string/paygear_balance"
            android:paddingRight="8dp"/>

        <ImageView
            android:id="@+id/history"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_action_history"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/balance_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/paygear_card_balance_back_shape"
        android:padding="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/rial"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bals_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/paygear_card__other_balances_back_shape"
        android:padding="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/chashable_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b3000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cashable_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1e96ff"
                android:textSize="14sp"
                android:text="@string/cashable"/>

        </LinearLayout>

        <TextView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#b3000000"
            android:textSize="16sp"
            android:text="+"/>

        <LinearLayout
            android:id="@+id/gift_bal_layout"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/gift_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#b3000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gift_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1e96ff"
                android:textSize="14sp"
                android:text="@string/gift"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/cashout_layout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/cashout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:drawablePadding="4dp"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:text="@string/cash_out_paygear"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/charge_layout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:drawablePadding="4dp"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:text="@string/cash_in_paygear" />

        </FrameLayout>

    </LinearLayout>
    

</LinearLayout>