<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
  android:id="@+id/rootView"
    android:layout_height="match_parent"
    android:background="@color/fragment_back"
    tools:context=".fragment.CashOutRequestFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/limits"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f5f5f5"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/limit1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#757575"/>

                <TextView
                    android:id="@+id/limit2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textColor="#66ba41"/>

            </LinearLayout>


            <LinearLayout
              android:id="@+id/rootPrice"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/price_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:text="@string/enter_your_card_number"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="-8dp"/>

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input_edit_text_back"
                    android:textColor="#212121"
                    android:inputType="number"
                    android:hint="@string/price_rial"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_margin="16dp"
                    android:layoutDirection="ltr"/>


                <TextView
                    android:id="@+id/number_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:text="@string/enter_your_card_number"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="-8dp"/>

                <AutoCompleteTextView
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input_edit_text_back"
                    android:textColor="#212121"
                    android:inputType="number"
                    android:hint="@string/price_rial"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_margin="16dp"
                    android:layoutDirection="ltr"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/button_green_selector_24dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:text="@string/ok" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:visibility="gone"/>

                </FrameLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#61000000"
                android:lineSpacingExtra="6sp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/edit_profile_hint"/>

            <TextView
                android:id="@+id/get_sheba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:textColor="#03a9f4"
                android:text="@string/how_to_get_sheba"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="16dp"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>


    <ir.radsense.raadcore.widget.ProgressLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"/>

</FrameLayout>
